--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.css
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.css
@@ -1,2 +1,2 @@
-
+.SubscribeMailChimpList__form-wrapper-widget,.SubscribeMailChimpList__form-wrapper-widget .SubscribeMailChimpList__form-wrapper{width:100%}.SubscribeMailChimpList__form-wrapper-widget .SubscribeMailChimpList__form-wrap{border:1px solid #dcdcdc}.SubscribeMailChimpList__form-wrapper-widget .SubscribeMailChimpList__form-button{background:#7fad95;color:#fff}
 /*# sourceMappingURL=maps/SubscribeMailChimpList-SubscribeMailChimpWidget.css.map */
