--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
@@ -1,24 +1,32 @@
-.SubscribeMailChimpList__form-wrapper {
-}
+.SubscribeMailChimpList__form-wrapper-widget {
+  width: 100%;
 
-.SubscribeMailChimpList__form-wrap {
-}
+  .SubscribeMailChimpList__form-wrapper {
+    width: 100%;
+  }
 
-.SubscribeMailChimpList__form-title {
-}
+  .SubscribeMailChimpList__form-wrap {
+    border: 1px solid #DCDCDC;
+  }
 
-.SubscribeMailChimpList__form {
-}
+  .SubscribeMailChimpList__form-title {
+  }
 
-.SubscribeMailChimpList__form-fields-wrapper {
-}
+  .SubscribeMailChimpList__form {
+  }
 
-.SubscribeMailChimpList__form-input {
-}
+  .SubscribeMailChimpList__form-fields-wrapper {
+  }
 
-.SubscribeMailChimpList__form-button {
+  .SubscribeMailChimpList__form-input {
+  }
 
-}
+  .SubscribeMailChimpList__form-button {
+    background: #7FAD95;
+    color: #fff;
+  }
 
-.SubscribeMailChimpList__form-alerts-wrap {
+  .SubscribeMailChimpList__form-alerts-wrap {
+  }
+
 }
