--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
@@ -6,27 +6,58 @@
   }
 
   .SubscribeMailChimpList__form-wrap {
-    border: 1px solid #DCDCDC;
+    border: 1px solid #dcdcdc;
+    border-radius: 5px;
   }
 
   .SubscribeMailChimpList__form-title {
+    width: 100%;
+    font-size: 14px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #4e4e4e;
   }
 
   .SubscribeMailChimpList__form {
   }
 
   .SubscribeMailChimpList__form-fields-wrapper {
+    position: relative;
+    height: 30px;
   }
 
   .SubscribeMailChimpList__form-input {
+    border-radius: 30px;
+    display: block;
+    height: 100%;
+    background: #F2F2F2;
+    color: #474747;
+    border: none;
+
+    &::placeholder {
+      color: #474747;
+    }
   }
 
   .SubscribeMailChimpList__form-button {
+    border-radius: 30px;
+    display: block;
+    height: 100%;
     background: #7FAD95;
     color: #fff;
+    font-size: 10px;
+    border: none;
+    width: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
   }
 
   .SubscribeMailChimpList__form-alerts-wrap {
+    color: #EB5757;
+    font-size: 13px;
   }
 
 }
