--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
@@ -8,6 +8,8 @@
   .SubscribeMailChimpList__form-wrap {
     border: 1px solid #dcdcdc;
     border-radius: 5px;
+
+    padding: 40px 20px 16px;
   }
 
   .SubscribeMailChimpList__form-title {
@@ -16,6 +18,8 @@
     text-align: center;
     text-transform: uppercase;
     color: #4e4e4e;
+    font-weight: bold;
+    padding-bottom: 20px;
   }
 
   .SubscribeMailChimpList__form {
@@ -33,6 +37,7 @@
     background: #F2F2F2;
     color: #474747;
     border: none;
+    width: 100%;
 
     &::placeholder {
       color: #474747;
@@ -40,14 +45,16 @@
   }
 
   .SubscribeMailChimpList__form-button {
+    height: 100%;
+    width: 100%;
+    max-width: 100px;
+
     border-radius: 30px;
     display: block;
-    height: 100%;
     background: #7FAD95;
     color: #fff;
     font-size: 10px;
     border: none;
-    width: 100%;
     position: absolute;
     right: 0;
     top: 0;
@@ -56,8 +63,12 @@
   }
 
   .SubscribeMailChimpList__form-alerts-wrap {
+    padding-top: 12px;
     color: #EB5757;
     font-size: 13px;
+    width: 100%;
+    display: block;
+    text-align: center;
   }
 
 }
