--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
@@ -38,10 +38,13 @@
     color: #474747;
     border: none;
     width: 100%;
+    padding-left: 12px;
+    padding-right: 112px;
 
     &::placeholder {
       color: #474747;
     }
+
   }
 
   .SubscribeMailChimpList__form-button {
