--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
@@ -40,6 +40,7 @@
     width: 100%;
     padding-left: 12px;
     padding-right: 112px;
+    font-size: 12px;
 
     &::placeholder {
       color: #474747;
