--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
@@ -31,21 +31,24 @@
   }
 
   .SubscribeMailChimpList__form-input {
-    border-radius: 30px;
-    display: block;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    line-height: 100px;
+
+    border-radius: 20px;
     height: 100%;
     background: #F2F2F2;
     color: #474747;
     border: none;
     width: 100%;
-    padding-left: 12px;
+    padding-left: 15px;
     padding-right: 112px;
     font-size: 12px;
 
     &::placeholder {
       color: #474747;
     }
-
   }
 
   .SubscribeMailChimpList__form-button {
@@ -53,7 +56,7 @@
     width: 100%;
     max-width: 100px;
 
-    border-radius: 30px;
+    border-radius: 20px;
     display: block;
     background: #7FAD95;
     color: #fff;
