--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
@@ -56,6 +56,7 @@
     width: 100%;
     max-width: 100px;
 
+    line-height: 100%;
     border-radius: 20px;
     display: block;
     background: #7FAD95;
