Button tt-u style

--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
@@ -35,7 +35,6 @@
     align-items: center;
     align-content: center;
     line-height: 100px;
-
     border-radius: 20px;
     height: 100%;
     background: #F2F2F2;
@@ -49,19 +48,20 @@
     &::placeholder {
       color: #474747;
     }
+
   }
 
   .SubscribeMailChimpList__form-button {
     height: 100%;
     width: 100%;
     max-width: 100px;
-
     line-height: 100%;
     border-radius: 20px;
     display: block;
     background: #7FAD95;
     color: #fff;
     font-size: 10px;
+    text-transform: uppercase;
     border: none;
     position: absolute;
     right: 0;
