--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
@@ -71,11 +71,14 @@
   }
 
   .SubscribeMailChimpList__form-alerts-wrap {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
     padding-top: 12px;
     color: #EB5757;
     font-size: 13px;
     width: 100%;
-    display: block;
     text-align: center;
   }
 
