--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpList.less
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpList.less
@@ -1,42 +1,90 @@
-.SubscribeMailChimpList__form-wrapper {
-  width: 100%;
-}
+.SubscribeMailChimpList__form-shortcode {
 
-.SubscribeMailChimpList__form-wrap {
-  width: 100%;
-}
-
-.SubscribeMailChimpList__form-title {
-  width: 100%;
-  text-align: center;
-}
-
-.SubscribeMailChimpList__form {
-  width: 100%;
-}
-
-.SubscribeMailChimpList__form-fields-wrapper {
-  width: 100%;
-  position: relative;
-}
-
-.SubscribeMailChimpList__form-input {
-  position: relative;
-}
-
-.SubscribeMailChimpList__form-button {
-  position: absolute;
-  right: 0;
-  width: 100px;
-  background: #80A793;
-  color: #fff;
-  cursor: pointer;
-}
-
-.SubscribeMailChimpList__form-alerts-wrap {
-  width: 100%;
-  text-align: center;
-  &.success{
-    color: #348060;
+  .SubscribeMailChimpList__form-wrapper {
+    width: 100%;
   }
+
+  .SubscribeMailChimpList__form-wrap {
+    padding: 16px 6px;
+  }
+
+  .SubscribeMailChimpList__form-title {
+    width: 100%;
+    font-size: 14px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #4e4e4e;
+    font-weight: bold;
+    padding-bottom: 20px;
+  }
+
+  .SubscribeMailChimpList__form {
+    width: 100%;
+  }
+
+  .SubscribeMailChimpList__form-fields-wrapper {
+    width: 100%;
+    position: relative;
+    height: 30px;
+  }
+
+  .SubscribeMailChimpList__form-input {
+    position: relative;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    line-height: 100px;
+    border-radius: 20px;
+    height: 100%;
+    background: #F2F2F2;
+    color: #474747;
+    border: none;
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 112px;
+    font-size: 12px;
+
+    &::placeholder {
+      color: #474747;
+    }
+
+  }
+
+  .SubscribeMailChimpList__form-button {
+    height: 100%;
+    width: 100%;
+    max-width: 100px;
+    line-height: 100%;
+    border-radius: 20px;
+    display: block;
+    background: #7FAD95;
+    color: #fff;
+    font-size: 10px;
+    text-transform: uppercase;
+    border: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    cursor: pointer;
+  }
+
+  .SubscribeMailChimpList__form-alerts-wrap {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    padding-top: 12px;
+    color: #EB5757;
+    font-size: 13px;
+    width: 100%;
+    text-align: center;
+
+    &.success {
+      color: #348060;
+    }
+
+  }
+
 }
