Add respond message prop

--- a/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
+++ b/public/css/SubscribeMailChimpList-SubscribeMailChimpWidget.less
@@ -8,8 +8,7 @@
   .SubscribeMailChimpList__form-wrap {
     border: 1px solid #dcdcdc;
     border-radius: 5px;
-
-    padding: 40px 20px 16px;
+    padding: 24px 0 16px;
   }
 
   .SubscribeMailChimpList__form-title {
